@@ -8,10 +8,12 @@ Author: Martin Pitt <martin.pitt@ubuntu.com>'''
 APPORT_LOG = '/var/log/apport.log'
 
 import os.path, subprocess
+from glob import glob
+import apport.hookutils
 
 def add_info(report):
-    if os.path.exists(APPORT_LOG):
-        report['ApportLog'] = open(APPORT_LOG).read()
-    stat = subprocess.Popen('stat -c %a:%u:%g:%s:%y:%x:%n /var/crash/*',
-        shell=True, stdout=subprocess.PIPE, stderr=subprocess.STDOUT)
-    report['CrashReports'] = stat.communicate()[0]
+    apport.hookutils.attach_file_if_exists(report, APPORT_LOG, 'ApportLog')
+    reports = glob('/var/crash/*')
+    if reports:
+        report['CrashReports'] = apport.hookutils.command_output(
+            ['stat', '-c', '%a:%u:%g:%s:%y:%x:%n'] + reports)
